<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="348dp"
        android:text="@string/txt_Convertir"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="164dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="351dp"
        android:entries="@array/spinner_conversion"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="338dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txt_cajaGrados"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_A"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="155dp"
        android:layout_height="27dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="21dp"
        android:entries="@array/spinner_conversion"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="394dp"
        android:text="@string/txt_igual"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_cajaResultado"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>